tests/integration/fail/strings_methods_type_error.kr
# Test: Type errors for string methods
# Expected: Fail with type error

# contains requires strings
set x to 5
set result to call contains with x, "test"

